--- a/skill/templates/skill/skill.html
+++ b/skill/templates/skill/skill.html
@@ -1,34 +1,35 @@
 {% extends "base.html" %}
 {% load static %}
+
 {% block content %}
-    <div style="width: 50%; margin: auto;">
-        <br/>
-        <h1 style="width: 100%;text-align: center; background-color: green; color: white; padding: 7px;">
-            My Skills
-        </h1>
-        <br/>
+    <div class="container" style="width: 50%;">
+        <div class="text-center bg-success text-white py-2">
+            <h1>My Skills</h1>
+        </div>
     </div>
-    <div style="width: 80%; margin: auto;" class="row">
+
+    <div class="container" style="width: 80%;">
         {% if user.is_authenticated %}
             <div class="d-grid gap-2 d-md-block">
                 <a href="{% url 'add_skill' %}" class="btn btn-danger" type="button">Add Skill</a>
-                <br/>
-                <br/>
             </div>
+            <br/>
         {% endif %}
 
-        {% for i in skill %}
-            <div class="col-md-4 mb-4">
-                <div class="card h-100 text-center">
-                    <div class="card-body">
-                        <img src="{{ i.icon }}" class="card-img-top" alt="{{ i.skill_name }} Icon" style="max-width: 30%; height: auto;">                            
-                        <h3 class="card-title font-weight-bold">{{ i.skill_name }}</h3><br/>
-                        <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="{{ i.proficiency }}" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar w-{{ i.proficiency }}"></div>
+        <div class="row">
+            {% for i in skill %}
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 text-center">
+                        <div class="card-body">
+                            <img src="{{ i.icon }}" class="card-img-top" alt="{{ i.skill_name }} Icon" style="max-width: 30%; height: auto;">
+                            <h3 class="card-title font-weight-bold">{{ i.skill_name }}</h3>
+                            <div class="progress" role="progressbar" aria-valuenow="{{ i.proficiency }}" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar w-{{ i.proficiency }}"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
