--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -39,7 +39,7 @@
                             <div class="text-center">
                                 <a href="{{ project.git_link }}" class="btn btn-primary">GitHub</a>     
                                 <a href="#" class="btn btn-info">Live Site</a>
-                                <a href="#" class="btn btn-danger">feedback</a>
+                                {% comment %} <a href="#" class="btn btn-danger">feedback</a> {% endcomment %}
                             </div>
 
                             <div class="mt-3">
