--- a/review/templates/review/show_review.html
+++ b/review/templates/review/show_review.html
@@ -6,15 +6,14 @@
         <h1 style="width: 100%;text-align: center; background-color: green; color: white; padding: 7px;">
             Feedback
         </h1>
-        <h1 style="width: 100%;text-align: center; ">
-            <button type="button" class="btn btn-danger" > ⚠️ Practice Mode ⚠️</button>
-        </h1>
     </div>
 
 <div class="container text-left">
+    {% if user.is_authenticated %}
     <a href="{% url 'review' %}">
         <button class="btn btn-info" type="button">Inspire Me</button>
     </a>
+    {% endif %}
     <br/>
     <br/>
     <div class="row">
