--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,6 +1,4 @@
 {% extends 'base.html' %}
-{% load crispy_forms_tags %}
-
 {% block content %}
   <div style="width: 50%; margin: auto;">
         <br/>
@@ -11,7 +9,7 @@
   <div style="width: 50%; margin: auto;">
     <form method="post" action="{% url 'register' %}">
       {% csrf_token %}
-      {{ form|crispy}}
+      {{ form}}
       <button class="btn btn-primary" type="submit">Submit</button>
     </form>
   </div>
