--- a/review/templates/review/review.html
+++ b/review/templates/review/review.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% load crispy_forms_tags %}
 {% block content %}
     <div style="width: 50%; margin: auto;">
         <br/>
@@ -8,7 +7,7 @@
         </h1><hr/>
         <form method="POST">
             {% csrf_token %}
-            {{ form|crispy }}
+            {{ form.as_p }}
             <button class="btn btn-primary" type="submit">Submit</button>
         </form>
     </div>
