--- a/skill/templates/skill/add_skill.html
+++ b/skill/templates/skill/add_skill.html
@@ -10,7 +10,7 @@
         <br/>
         <form method="post">
             {% csrf_token %}
-            {{ form }}
+            {{ form.as_p }}
             <button class="btn btn-primary" type="submit">Submit</button>
         </form>
     </div>    
