--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -9,7 +9,7 @@
   <div style="width: 50%; margin: auto;">
     <form method="post" action="{% url 'login' %}">
       {% csrf_token %}
-      {{ form }}
+      {{ form.as_p }}
       <button class="btn btn-primary" type="submit">Submit</button>
     </form>
   </div>
